syntax = "proto3";

package proto;

service UserInfoService {
    rpc Get (UserGetRequest) returns (UserGetResponse);
    rpc GetList (EmptyRequest) returns (stream UserGetResponse);
    rpc Set (UserSetRequest) returns (UserSetResponse);
}

message EmptyRequest {

}

message UserGetRequest {
    int32 id = 1;
}

message UserGetResponse {
    int32  id   = 1;
    string name = 2;
    int32  age  = 3;
    string address = 4;
}

message UserSetRequest {
    string name = 1;
    int32  age  = 2;
    string address = 3;
}

message UserSetResponse {
    bool result = 1;
}
